# simulator

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  test-app.js  test-buffer.js  test-canvas.js  test-compile.sh  test-update.js  test-wasm.js  test_app.js  test_browser.js  test_playwright.js
.github/workflows/: ci.yml
scripts/: smoke.test.js  test-ptrs.js  test_vm.js
src/cpp/: bindings.cpp  car.cpp  car.h  car_physics.cpp  car_physics.h  evolution_manager.cpp  evolution_manager.h  fluid_solver.cpp  fluid_solver.h  neural_network.cpp  neural_network.h  nn.cpp  nn.h  particle.h  simulation.cpp  simulation.h  spatial_grid.h
src/web/: index.html  style.css
src/web/public/: app.js
src/web/public/wasm/: fluid_sim.js  fluid_sim.wasm
